{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 771,
  "lineage": "3df40bea-2adf-6060-c050-96f3ccf0e1d1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "secgrp-RDS-testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:996404169526:security-group/sg-0b7f30c646fa09ab3",
            "description": "Security group attached to tahara-master to allow EC2 instances with specific security groups attached to connect to the database. Modification could lead to connection loss.",
            "filter": null,
            "id": "sg-0b7f30c646fa09ab3",
            "name": "rds-ec2-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "secgrp-REDIS-testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:996404169526:security-group/sg-0c2f4ed74feba0757",
            "description": "allow staging backend to access this redis",
            "filter": null,
            "id": "sg-0c2f4ed74feba0757",
            "name": "redis-staging",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:loadbalancer/app/preview-lp/a8e5461a2759d071",
            "arn_suffix": "app/preview-lp/a8e5461a2759d071",
            "desync_mitigation_mode": "defensive",
            "dns_name": "preview-lp-2007173012.me-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:me-central-1:996404169526:loadbalancer/app/preview-lp/a8e5461a2759d071",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "preview-lp",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0763406322025925a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0546331049ea2ea9c"
              },
              {
                "subnet_id": "subnet-0b78c4258e48d3666"
              }
            ],
            "subnets": [
              "subnet-0546331049ea2ea9c",
              "subnet-0b78c4258e48d3666"
            ],
            "tags": {
              "Env": "preview",
              "Environment": "preview"
            },
            "tags_all": {
              "Env": "preview",
              "Environment": "preview"
            },
            "vpc_id": "vpc-02fbd859e9353176a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z08230872XQRWHG2XF6I"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_subnets.subs",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "preview-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/d67b020445b116e4",
            "certificate_arn": "arn:aws:acm:me-central-1:996404169526:certificate/fbf9d53f-7bd8-48d4-91a8-0c260f263e36",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:targetgroup/preview-backend/51f0145015231bb1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/d67b020445b116e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:loadbalancer/app/preview-lp/a8e5461a2759d071",
            "port": 8443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Env": "preview",
              "service": "backend"
            },
            "tags_all": {
              "Env": "preview",
              "service": "backend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.preview-cert",
            "aws_lb.alp",
            "aws_lb_target_group.preview-backend",
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_subnets.subs",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "preview-backend-redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/0030e7f58ef494d1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "8443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/0030e7f58ef494d1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:loadbalancer/app/preview-lp/a8e5461a2759d071",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Env": "preview",
              "service": "backend"
            },
            "tags_all": {
              "Env": "preview",
              "service": "backend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alp",
            "aws_lb_target_group.preview-backend",
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_subnets.subs",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "preview-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/cc06cc7fc43023d3",
            "certificate_arn": "arn:aws:acm:me-central-1:996404169526:certificate/fbf9d53f-7bd8-48d4-91a8-0c260f263e36",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:targetgroup/preview-frontend/52bec9d779d9477c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/cc06cc7fc43023d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:loadbalancer/app/preview-lp/a8e5461a2759d071",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Env": "preview",
              "service": "frontend"
            },
            "tags_all": {
              "Env": "preview",
              "service": "frontend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.preview-cert",
            "aws_lb.alp",
            "aws_lb_target_group.preview-frontend",
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_subnets.subs",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "preview-frontend-redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/c99aa29f2953fbc0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:996404169526:listener/app/preview-lp/a8e5461a2759d071/c99aa29f2953fbc0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:loadbalancer/app/preview-lp/a8e5461a2759d071",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Env": "preview",
              "service": "frontend"
            },
            "tags_all": {
              "Env": "preview",
              "service": "frontend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alp",
            "aws_lb_target_group.preview-frontend",
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_subnets.subs",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "preview-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:targetgroup/preview-backend/51f0145015231bb1",
            "arn_suffix": "targetgroup/preview-backend/51f0145015231bb1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/check-server",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:996404169526:targetgroup/preview-backend/51f0145015231bb1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "preview-backend",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "dependencies": [
            "aws_lb.alp",
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_subnets.subs",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "preview-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:me-central-1:996404169526:targetgroup/preview-frontend/52bec9d779d9477c",
            "arn_suffix": "targetgroup/preview-frontend/52bec9d779d9477c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:996404169526:targetgroup/preview-frontend/52bec9d779d9477c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "preview-frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "dependencies": [
            "aws_lb.alp",
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_subnets.subs",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:996404169526:security-group/sg-0763406322025925a",
            "description": "Allow Http/s inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0763406322025925a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http from Outside world",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http from Outside world",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Https from Outside world",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Https from Outside world",
                "from_port": 8443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "Preview LP sec grp",
            "name_prefix": "",
            "owner_id": "996404169526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Preview",
              "Name": "secgrp-ALP-preview"
            },
            "tags_all": {
              "Env": "Preview",
              "Name": "secgrp-ALP-preview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp-backend-preview",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:996404169526:security-group/sg-0240e12aed92886ce",
            "description": "sec group used by backend in preview env",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0240e12aed92886ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow frontend \u0026 loadbalancer to access backend",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0763406322025925a",
                  "sg-08b19c2125a16972b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "secgrp-backend-preview",
            "name_prefix": "",
            "owner_id": "996404169526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "preview",
              "Environment": "preview",
              "Name": "secgrp-backend-preview"
            },
            "tags_all": {
              "Env": "preview",
              "Environment": "preview",
              "Name": "secgrp-backend-preview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.secgrp-frontend-preview",
            "data.aws_security_groups.lb_sg",
            "data.aws_security_groups.secgrp-frontend-preview",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp-frontend-preview",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:996404169526:security-group/sg-08b19c2125a16972b",
            "description": "sec group used by frontend in preview env",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b19c2125a16972b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALP to access frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0763406322025925a"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "secgrp-frontend-preview",
            "name_prefix": "",
            "owner_id": "996404169526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "preview",
              "Name": "secgrp-frontend-preview"
            },
            "tags_all": {
              "Env": "preview",
              "Name": "secgrp-frontend-preview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_security_groups.lb_sg",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds-sec-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allowing preview backend to use testing RDS",
            "from_port": 3306,
            "id": "sgrule-2629913177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b7f30c646fa09ab3",
            "security_group_rule_id": "sgr-0c60aecec42936c53",
            "self": false,
            "source_security_group_id": "sg-0240e12aed92886ce",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.secgrp-backend-preview",
            "aws_security_group.secgrp-frontend-preview",
            "data.aws_security_group.secgrp-RDS-testing",
            "data.aws_security_groups.lb_sg",
            "data.aws_security_groups.secgrp-backend-preview",
            "data.aws_security_groups.secgrp-frontend-preview",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis-sec-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow preview backend to use testing REDIS",
            "from_port": 6379,
            "id": "sgrule-1197554352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c2f4ed74feba0757",
            "security_group_rule_id": "sgr-05316b436f15c14da",
            "self": false,
            "source_security_group_id": "sg-0240e12aed92886ce",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.secgrp-backend-preview",
            "aws_security_group.secgrp-frontend-preview",
            "data.aws_security_group.secgrp-REDIS-testing",
            "data.aws_security_groups.lb_sg",
            "data.aws_security_groups.secgrp-backend-preview",
            "data.aws_security_groups.secgrp-frontend-preview",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:996404169526:security-group/sg-08fb6a37884f372a7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0240e12aed92886ce",
                  "sg-07e7efdd88a429620"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fb6a37884f372a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240e12aed92886ce",
                  "sg-07e7efdd88a429620"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "preview-uploads-sg",
            "name_prefix": "",
            "owner_id": "996404169526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "preview",
              "Name": "preview-uploads"
            },
            "tags_all": {
              "Environment": "preview",
              "Name": "preview-uploads"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.secgrp-backend-preview",
            "aws_security_group.secgrp-frontend-preview",
            "data.aws_security_groups.lb_sg",
            "data.aws_security_groups.secgrp-backend-preview",
            "data.aws_security_groups.secgrp-frontend-preview",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.efs-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:996404169526:security-group/sg-0c6d72d06945172a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0240e12aed92886ce",
                  "sg-07e7efdd88a429620"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6d72d06945172a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240e12aed92886ce",
                  "sg-07e7efdd88a429620"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "preview-apache-sg",
            "name_prefix": "",
            "owner_id": "996404169526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "preview",
              "Name": "preview-apache"
            },
            "tags_all": {
              "Environment": "preview",
              "Name": "preview-apache"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fbd859e9353176a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.secgrp-backend-preview",
            "aws_security_group.secgrp-frontend-preview",
            "data.aws_security_groups.lb_sg",
            "data.aws_security_groups.secgrp-backend-preview",
            "data.aws_security_groups.secgrp-frontend-preview",
            "data.aws_vpcs.vpcs"
          ]
        }
      ]
    }
  ]
}